feat: Localisation added

--- a/src/app/pages/patients/history/history.component.html
+++ b/src/app/pages/patients/history/history.component.html
@@ -10,9 +10,9 @@
         </div>
 
         <ng-template #historyDialog>
-            <nb-card class="dialog-card w-100">
+            <nb-card class="dialog-card card-width">
                 <nb-card-header>
-                    <h6 class="text-center">Add History</h6>
+                    <h6 class="text-center">{{'kAddNote' | translate}}</h6>
                 </nb-card-header>
                 <nb-card-body>
                     <form [formGroup]="historyForm">
@@ -20,7 +20,7 @@
                             <div class="col-md-12">
                                 <div class="form-group mb-1">
                                     <label for="note" class="label"> <span class="text-danger">*</span>
-                                        Note</label>                                
+                                        {{'kNote' | translate}}</label>                                
                                         <textarea nbInput fullWidth placeholder="Note"  formControlName="note" id="note"></textarea>
                                 </div>
                             </div>
@@ -29,10 +29,10 @@
                 </nb-card-body>
                 <nb-card-footer>
                     <div class="row justify-content-end">
-                        <div class="col-5 pe-2">
+                        <div class="col-2 pe-2">
                             <button nbButton status="danger" class="w-100" size="medium" (click)="refclose()">{{'kCancel' | translate}}</button>
                         </div>
-                        <div class="col-5 ps-2">
+                        <div class="col-2 ps-2">
                             <button nbButton status="success" class="w-100" size="medium" [disabled]="!historyForm.valid"
                             (click)="save()">{{'kSave' | translate}}</button>
                         </div>
@@ -45,9 +45,9 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col" class="subtitle">Name</th>
-                            <th scope="col" class="subtitle">Note</th>
-                            <th scope="col" class="subtitle">Date</th>
+                            <th scope="col" class="subtitle">{{'kName' | translate}}</th>
+                            <th scope="col" class="subtitle">{{'kNote' | translate}}</th>
+                            <th scope="col" class="subtitle">{{'kDate' | translate}}</th>
                         </tr>
                     </thead>
                     <tbody>
