--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" [nbSpinner]="isLoading">
+<nb-card size="large" style="overflow: auto" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the care team">
     <nb-card-header>
         <div class="row">
             <div class="col-2 offset-10 p-0">
