--- a/src/app/pages/patients/history/history.component.html
+++ b/src/app/pages/patients/history/history.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading">
+<nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the history">
     <nb-card-body>
         <div class="row justify-content-end">
             <div class="col-1 ps-1">
