--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,4 +1,4 @@
-<nb-card class="patient-list mb-0" [nbSpinner]="isLoading">
+<nb-card class="patient-list mb-0" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the patients list">
     <nb-card-header class="justify-content-center p-0">
         <nb-list-item class="pb-0">
             <div class="row m-auto">
