--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading">
+<nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the schedule list">
     <div class="container" *ngIf="showAppointments">
     <div class="row justify-content-end mt-3">
         <div class="col-1 ps-1">
