--- a/src/app/shared/components/add/add.component.html
+++ b/src/app/shared/components/add/add.component.html
@@ -1,4 +1,4 @@
-    <nb-card size="large" [nbSpinner]="isLoading" class="card-width">      
+    <nb-card size="large" [nbSpinner]="isLoading" class="card-width" nbSpinnerMessage="Please wait. We are fetching the patient data">      
         <nb-card-header>
             <div class="row d-flex">
                 <div class="col-md-11 col-sm-9"> {{!!patientID ? 'Edit' :'Add'}} Patient</div>
