--- a/src/app/pages/patients/alerts/alerts.component.html
+++ b/src/app/pages/patients/alerts/alerts.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" class="h-100" [nbSpinner]="isLoading" >
+<nb-card size="large" class="h-100" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the alerts list" >
 <!-- <nb-card-header>Alerts</nb-card-header> -->
 <nb-card-body>
         <table class="table table-striped">
