--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,4 +1,4 @@
-<nb-card [nbSpinner]="isLoading" class="mb-1">
+<nb-card [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the profile details" class="mb-1">
     <nb-card-body *ngIf="showPatient">
         <img src="assets/svg/404.svg" class="w-100">
         <h1 class="text-center text-muted">Patient not found</h1>
