--- a/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
+++ b/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
@@ -1,5 +1,5 @@
 <p class="subtitle">{{'kBloodPressure' | translate}}</p>
-<div class="d-block" [nbSpinner]="isLoading">
+<div class="d-block" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the graph">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins" [options]="lineChartOptions" #chart>
     </canvas>
