--- a/src/app/shared/components/filter-dialog/filter-dialog.component.html
+++ b/src/app/shared/components/filter-dialog/filter-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-    <nb-card [nbSpinner]="isLoading">
+    <nb-card [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the patient list">
         <nb-card-header>
             <span>{{'kfilter' | translate}}</span>
         </nb-card-header>
