--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -28,17 +28,21 @@
                             </div>
 
                             <div class="row w-100 my-2">
-                                <div class="col-md-4  col-4  col-lg-4 col-sm-4 px-1">
+                                <div class="col-md-3  col-3  col-lg-3 col-sm-3 px-1">
+                                </div>
+                                <div class="col-md-3  col-3  col-lg-3 col-sm-3 px-1">
                                     <button nbButton fullWidth outline status="primary" size="small"
                                         (click)="rescheduleModal(rescheduleDialog)">
                                         {{'kReschedule' | translate }}
                                     </button>
                                 </div>
-                                <div class="col-md-4  col-4 col-lg-4 col-sm-4 px-1">
+                                <div class="col-md-3  col-3 col-lg-3 col-sm-3 px-1">
                                     <button nbButton fullWidth outline status="danger" size="small"
                                         (click)="cancelAppointment(deleteDialog)">
                                         {{'kCancel' | translate }}
                                     </button>
+                                </div>
+                                <div class="col-md-3  col-3  col-lg-3 col-sm-3 px-1">
                                 </div>
                             </div>
                         </div>
