--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="col-md-3  col-3 col-lg-3 col-sm-3 px-1">
                                     <button nbButton fullWidth outline status="danger" size="small"
-                                        (click)="cancelAppointment(deleteDialog)">
+                                        (click)="cancelAppointment(deleteDialog, provider.meetingId)">
                                         {{'kCancel' | translate }}
                                     </button>
                                 </div>
