--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -16,13 +16,12 @@
             (scroll)="onScroll($event.offsetY)" style="height: 600px;">
             <ngx-datatable-column name="Name">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                    <span>{{value}}</span>
-
+                    <span>{{value || '-'}}</span>
                 </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="DOB">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                    <span>{{value}}</span>
+                    <span>{{value || '-'}}</span>
                 </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Monitors">
@@ -42,8 +41,9 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Contact">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                    <i class="fas fa-phone text-primary"></i> <i class="far fa-comment-dots text-primary"></i> <i
-                        class="fas fa-video text-primary"></i>
+                    <i class="fas fa-phone text-primary p-2"></i>
+                    <i class="far fa-comment-dots text-primary p-2"></i>
+                    <i class="fas fa-video text-primary p-2"></i>
                 </ng-template>
             </ngx-datatable-column>
         </ngx-datatable>
