--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-4">
+<div class="mt-4" [nbSpinner]="isLoading">
     <div class="d-flex mb-4 ms-4 position-relative">
         <input type="search" fieldSize="medium" nbInput placeholder="Search With Name" class="mr-20" name="search"
             [(ngModel)]="searchText" (ngModelChange)="getList()">
@@ -10,7 +10,7 @@
             <nb-badge text="99+" status="danger" dotMode=true (click)="filterPatient()"></nb-badge>
         </div>
     </div>
-    <div class="col-md-12" [nbSpinner]="isLoading">
+    <div>
         <ngx-datatable class="bootstrap " [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true"
             [headerHeight]="headerHeight" [rowHeight]="rowHeight" [loadingIndicator]="isLoading" [scrollbarV]="true"
             (scroll)="onScroll($event.offsetY)" style="height: 600px;">
@@ -19,7 +19,7 @@
                     <span>{{value || '-'}}</span>
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="DOB">
+            <ngx-datatable-column name="DOB" [width]="50">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <span>{{value || '-'}}</span>
                 </ng-template>
