--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="col-md-3  col-3  col-lg-3 col-sm-3 px-1">
                                     <button nbButton fullWidth outline status="primary" size="small"
-                                        (click)="rescheduleModal(rescheduleDialog)">
+                                        (click)="rescheduleModal(rescheduleDialog, provider)">
                                         {{'kReschedule' | translate }}
                                     </button>
                                 </div>
@@ -103,7 +103,7 @@
 <ng-template #rescheduleDialog>
   <nb-card class="dialog-card">
       <nb-card-header>
-          <p class="subtitle">Are you sure want to reschedue this appoitment?</p>
+          <p class="subtitle">Are you sure want to reschedule this appoitment?</p>
       </nb-card-header>
       <nb-card-body>
           <div class="float-end">
