--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -11,20 +11,20 @@
         </div>
     </div>
     <div>
-        <ngx-datatable class="bootstrap " [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true"
+        <ngx-datatable class="bootstrap" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true"
             [headerHeight]="headerHeight" [rowHeight]="rowHeight" [loadingIndicator]="isLoading" [scrollbarV]="true"
             (scroll)="onScroll($event.offsetY)" style="height: 600px;">
-            <ngx-datatable-column name="Name">
+            <ngx-datatable-column name="Name" headerClass="ps-4" cellClass="ps-4">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <span>{{value || '-'}}</span>
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="DOB" [width]="50">
+            <ngx-datatable-column name="DOB" [maxWidth]="250" headerClass="text-center" cellClass="text-center">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <span>{{value || '-'}}</span>
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Monitors">
+            <ngx-datatable-column name="Monitors" [maxWidth]="200" headerClass="text-center" cellClass="text-center">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <a class="text-primary">View Vitals</a>
                     <!-- <button nbButton nbPopover="Hi, I'm popover!" nbPopoverPlacement="left">Open Popover</button> -->
@@ -34,16 +34,21 @@
                     </ng-template> -->
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Assigned Care Manager">
+            <ngx-datatable-column name="Assigned Care Manager" headerClass="text-center" cellClass="text-center">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <span>James</span>
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Contact">
+            <ngx-datatable-column name="Contact" [maxWidth]="200" headerClass="text-center" cellClass="text-center">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <i class="fas fa-phone text-primary p-2"></i>
                     <i class="far fa-comment-dots text-primary p-2"></i>
                     <i class="fas fa-video text-primary p-2"></i>
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Action" [maxWidth]="200" headerClass="text-center" cellClass="text-center">
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <button nbButton outline status="danger" size="tiny">Unenroll</button>
                 </ng-template>
             </ngx-datatable-column>
         </ngx-datatable>
