--- a/src/app/pages/dashboard/measurements/measurements.component.html
+++ b/src/app/pages/dashboard/measurements/measurements.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-4">
-    <div class="d-flex mb-4">
+    <div class="d-flex mb-4 ms-4">
         <input type="search" fieldSize="medium" nbInput placeholder="Search With Name" class="mr-20">
         <button nbButton outline status="primary">Patients With No Readings</button>
 
