--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -1,15 +1,15 @@
-<div class="mt-4" [nbSpinner]="isLoading">
+<div class="pt-4" [nbSpinner]="isLoading">
     <div class="d-flex mb-4 ms-4 position-relative">
         <input type="search" fieldSize="medium" nbInput placeholder="Search With Name" class="mr-20" name="search"
             [(ngModel)]="searchText" (ngModelChange)="getList()">
         <button nbButton outline status="primary">Patients With No Readings</button>
-        <nb-action class="ps-4 pe-0" nbTooltip="Filter" nbTooltipPlacement="top" icon="funnel-outline"
+        <nb-action class="ps-4 pe-2" nbTooltip="Filter" nbTooltipPlacement="top" icon="funnel-outline"
             (click)="filterPatient()">
         </nb-action>
         <div class="badge-position cursor-pointer" *ngIf="isFilter">
             <nb-badge text="99+" status="danger" dotMode=true (click)="filterPatient()"></nb-badge>
         </div>
-        <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" class="pe-0" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
+        <nb-action class="ps-2" nbTooltip="Add Patient" nbTooltipPlacement="top" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
 
         <!-- <div class="p-2 flex-shrink-1 cursor-pointer text-primary" (click)="addPatient()"><i class="fas fa-plus" style="padding-right: 10px;" (click)="addPatient()"></i>Add Patient</div> -->
 
