--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -1,5 +1,8 @@
 <nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the schedule list">
-    <div class="container" *ngIf="showAppointments">
+    <div class="container">
+    <router-outlet></router-outlet>
+    </div>
+    <div class="container" *ngIf="!showAppointments">
     <div class="row justify-content-end mt-3">
         <div class="col-1 ps-1">
         <nb-actions size="medium">
