fix: design changes

--- a/src/app/pages/patients/provider/provider.component.html
+++ b/src/app/pages/patients/provider/provider.component.html
@@ -1,7 +1,6 @@
 <div class="container"> 
     <div class="row ">
-    <div class="col-md-3 col-lg-3 col-sm-3 col-3 col-xl-3" ></div>
-    <div class="col-md-6 col-lg-6 col-sm-6  col-xl-6" >
+    <div class="col-md-6 offset-md-3">
       <div class="row py-3 mx-1">
                   <input type="search" nbInput fullWidth status="basic" name="searchText" id="searchText"
                   class="form-control" placeholder="{{'kSearchDoctors' | translate}}"
@@ -43,10 +42,6 @@
               <span>{{'kNoRecordsFound' | translate }}</span>
             </div>
       </ng-template>
-     
-      
-      </div>
-      <div class="col-md-3 col-lg-3 col-sm-3 col-3 col-xl-3" ></div>
-    
+      </div>   
     </div>
     </div>
