--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -127,9 +127,9 @@ style="height: 600px;">
     </ng-template>
 </ngx-datatable-column>
 <ngx-datatable-column name="Actions"  headerClass="text-center" cellClass="text-center">
-    <ng-template let-value="value" ngx-datatable-cell-template>
+    <ng-template let-value="value" let-row="row"  ngx-datatable-cell-template>
         <span>
-            <nb-icon icon="trash" nbTooltip="Delete" class="icon-font" (click)="openDialog(deleteDialog, i)" nbTooltipStatus="control"
+            <nb-icon icon="trash" nbTooltip="Delete" class="icon-font" (click)="openDialog(deleteDialog, row)" nbTooltipStatus="control"
             status="danger" pack="font-awesome" nbTooltipStatus="black"></nb-icon>
         </span>
     </ng-template>
